@@ -3,6 +3,7 @@ Changes for version 0.2
 - Coordinate rename to Coordinates
 - add util-class to convert Point in Coordinates
 - component draggable now hidden during drag.
+- add SwisiMouseEvent immutable implementation
 
 Bugs fixed
 ----------
